--- a/mysql-helm/templates/secrets.yaml
+++ b/mysql-helm/templates/secrets.yaml
@@ -1,11 +1,10 @@
-{{- if .Values.secrets.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-mysql-secrets
 type: Opaque
 data:
-  username: {{ .Values.secrets.username | b64enc | quote }}
-  password: {{ .Values.secrets.password | b64enc | quote }}
-{{- end }}
+  username: {{ .Values.secrets.mysqlUser | b64enc | quote }}
+  password: {{ .Values.secrets.mysqlPassword | b64enc | quote }}
+
 
